# Jarvis

./: .gitignore  PHASE5.md  QUICKSTART.md  README.md  SPRINTS.md  SPRINT_1_SUMMARY.txt  VOICE_CLONING.md  build_exe.py  launcher.py  main.py  pyproject.toml  start_jarvis.bat
.github/workflows/: ci.yml
DOC/: AUDIT_REPORT_SPRINTS_1-4.md  README.md
DOC/REPORTS/: 01_agile_sprint_plan.md  02_executive_summary.md  03_market_readiness_roadmap.md  04_hermes_hardening_report.md
DOC/RESEARCH_FINDINGS/: 01_jarvis_audit_comprehensive.md  02_hermes_shell_analysis.md  03_improvement_strategy.md
DOC/SPRINTS/: SPRINT_01_COMPLETE.md  SPRINT_02_COMPLETE.md  SPRINT_03_COMPLETE.md  SPRINT_04_COMPLETE.md
backend/: __init__.py  api.py
backend/agent/: __init__.py  action_schema.py  crew.py  debate.py  executor.py  observation.py  planner.py  runtime.py  tools.py  trajectory.py  verifier.py
backend/browser/: __init__.py  actions.py  session.py
backend/config/: __init__.py  loader.py  schema.py  settings.yaml
backend/gateway/: base.py  manager.py  telegram.py
backend/memory/: __init__.py  chroma_memory.py  nudges.py  preferences.py  retriever.py  scoring.py  summarizer.py
backend/optimization/: __init__.py  gtx1050ti.py  model_cache.py
backend/plugins/: __init__.py  base.py  manager.py
backend/screen/: capture.py  control.py
backend/security/: __init__.py  approval.py  audit_log.py  policy.py  rules.yaml  trust.py
backend/skills/: __init__.py  autonomous_creator.py  curator.py  improver.py  recorder.py  runner.py  skill_manager.py  skill_schema.py
configs/: default.yaml  gtx1050ti.yaml  high_end_gpu.yaml  low_ram.yaml  safe_mode.yaml
frontend/: package.json
installer/: wizard.py
overlay/: status.py  tray.py
plugins/: __init__.py  _safety.py  audio_control.py  browser.py  file_manager.py  system_monitor.py  terminal.py  time_plugin.py  windows_apps.py
scripts/: run_quality_checks.py  smoke_sprint10.py  smoke_sprint11.py  smoke_sprint12.py  smoke_sprint2.py  smoke_sprint3.py  smoke_sprint4.py  smoke_sprint5.py  smoke_sprint6.py  smoke_sprint7.py  smoke_sprint8.py  smoke_sprint9.py
service/: __init__.py  windows_service.py
tests/: test_action_planner.py  test_browser_tasks_config.py  test_hermes_gateway.py  test_hermes_nudges_nlparser.py  test_hermes_skill_learning.py  test_memory_and_skills.py  test_policy.py  test_schedule_weekly.py
ui-server/: package-lock.json  package.json
(+32 files in other folders)
