[project]
name = "jarvis-ai-local"
version = "0.1.0"
description = "Just A Rather Very Intelligent System - Local AI Computer Control Agent"
requires-python = ">=3.11"

dependencies = [
    # Core AI/ML
    "transformers>=4.46.0",
    "tokenizers>=0.19.0,<0.20.3",
    "torch>=2.5.0",
    "accelerate>=1.1.0",
    "bitsandbytes>=0.45.0",
    "optimum>=1.23.0",
    "sentence-transformers>=3.3.0",
    
    # Vision Models
    "qwen-vl-utils>=0.0.8",
    "timm>=1.0.12",
    
    # Voice - STT
    "faster-whisper>=1.1.0",
    "silero-vad>=5.1.2",
    "pyaudio>=0.2.14",
    
    # Voice - TTS
    "f5-tts>=0.1.0",
    "soundfile>=0.12.1",
    "sounddevice>=0.4.7",
    
    # Agent Framework
    "crewai>=0.85.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    
    # Memory
    "chromadb>=0.5.0",
    "langchain-chroma>=0.1.0",
    
    # Screen Control
    "pywinauto>=0.6.8",
    "uiautomation>=2.0.18",
    "PyDirectInput>=1.0.4",
    "pyautogui>=0.9.54",
    "mss>=9.0.2",
    "Pillow>=11.0.0",
    "numpy>=2.1.0",
    "opencv-python>=4.10.0",
    
    # Backend API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "python-multipart>=0.0.17",
    
    # Security & Safety
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    
    # Utilities
    "rich>=13.9.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "psutil>=6.1.0",
    "click>=8.1.7",
    "schedule>=1.2.2",
    "asyncio>=3.4.3",
    "aiofiles>=24.1.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
windows-service = [
    "pywin32>=308",
    "pyinstaller>=6.11.0",
]
overlay = [
    "customtkinter>=5.2.2",
    "pystray>=0.19.5",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["backend", "overlay", "scripts", "installer", "service"]
